# ReinaManager

./: %USERPROFILE%.cargoconfig.toml  .gitignore  AGENTS.md  CHANGELOG.md  README.ja_JP.md  README.md  README.zh_CN.md  README.zh_TW.md  biome.json  i18n.d.ts  i18next.config.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts
.cargo/: config
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/migration/: Cargo.toml
src-tauri/migration/old_migrations/: 001_database_initialization.sql  002_add_custom_fields.sql
src-tauri/migration/src/: backup.rs  lib.rs  m20250927_000001_baseline_migration.rs  m20250928_000002_split_games_table.rs  m20250930_000003_add_collections.rs  m20251229_000004_hybrid_single_table.rs  m20260201_000007_clean_empty_strings.rs  m20260508_000011_bgm_oauth.rs  m20260525_000012_move_custom_date_to_games.rs  m20260706_000013_reconcile_indexes.rs  m20260706_000014_migrate_game_sources.rs
src-tauri/migrations/: 001_backup_and_savedata_support.sql
src-tauri/reina-path/src/: lib.rs
src-tauri/src/: backup.rs  database.rs  entity.rs  game.rs  lib.rs  migrations.rs  utils.rs
src-tauri/src/backup/: archive.rs  common.rs  covers.rs  database.rs  mod.rs  savedata.rs
src-tauri/src/database/: connection.rs  db.rs  dto.rs  repository.rs  service.rs
src-tauri/src/database/repository/: collections_repository.rs  game_stats_repository.rs  games_repository.rs  (+1 more)
src-tauri/src/entity/: bgm_data.rs  collections.rs  custom_data.rs  game_collection_link.rs  game_sessions.rs  game_sources.rs  game_statistics.rs  games.rs  kun_data.rs  other_data.rs  prelude.rs  savedata.rs  user.rs  vndb_data.rs
src-tauri/src/game/: cover.rs  launch.rs  local_path.rs  monitor.rs  scan.rs
src-tauri/src/utils/: bgm_auth.rs  fs.rs  game_cover.rs  game_monitor.rs  http.rs  image.rs  image_proxy.rs  launch.rs  legacy_migration.rs  mod.rs  scan.rs
(+290 files in other folders)
