[package]
name = "ReinaManager"
version = "0.6.9"
description = "A lightweight visual novel manager"
authors = ["huoshen80"]
license = "GNU AFFERO GENERAL PUBLIC LICENSE"
repository = "https://github.com/huoshen80/ReinaManager/"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "reina_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "^2.7.0", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-http = "2.5.1"
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "^2.3.2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
sysinfo = "0.29.11"
sevenz-rust = "0.6.0"
chrono = { version = "0.4", features = ["serde"] }
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_ToolHelp",
] }
tokio = { version = "1.47.1", features = ["full"] }
sea-orm = { version = "1.1.0", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }
url = "2.5.7"
migration = { path = "migration" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.0"
tauri-plugin-single-instance = "2.3.2"
tauri-plugin-updater = "2"

[profile.dev]
incremental = true # 以较小的步骤编译您的二进制文件。

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true        # 启用链接时优化。
opt-level = "z"   # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort"   # 通过禁用 panic 处理程序来提高性能。
strip = true      # 确保移除调试符号。
